--- a/lainnya/biografi-penulis.tex
+++ b/lainnya/biografi-penulis.tex
@@ -16,6 +16,6 @@
 \end{wrapfigure}
 
 % Ubah kalimat berikut dengan biografi dari mahasiswa
-\name{}, lahir pada \lipsum[1]
+\name{}, lahir pada 24 Agustus 2002 \lipsum[1]
 
 \lipsum[2]
