--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % Judul dokumen
 \title{Buku Tugas Akhir ITS}
-\author{Musk, Elon Reeve}
+\author{Aptanagi, Urdhanaka}
 
 % Pengaturan ukuran teks dan bentuk halaman dua sisi
 \documentclass[12pt,twoside]{report}
@@ -96,7 +96,6 @@
 \titlespacing{\subsubsection}{0ex}{0.5ex}{0ex}
 
 \input{pustaka/variables.tex}
-
 \input{pustaka/tanda-hubung.tex}
 
 % Menambahkan resource daftar pustaka
