--- a/pustaka/variables.tex
+++ b/pustaka/variables.tex
@@ -1,47 +1,49 @@
 % Atur variabel berikut sesuai namanya
 
 % nama
-\newcommand{\name}{Elon Reeve Musk}
-\newcommand{\authorname}{Musk, Elon Reeve}
+\newcommand{\name}{Urdhanaka Aptanagi}
+\newcommand{\authorname}{Aptanagi, Urdhanaka}
 \newcommand{\nickname}{Elon}
-\newcommand{\advisor}{Nikola Tesla, S.T., M.T}
-\newcommand{\coadvisor}{Wernher von Braun, S.T., M.T}
+\newcommand{\advisor}{Royyana Muslim Ijtihadie, S.Kom., M.Kom., Ph.D.}
+\newcommand{\coadvisor}{Ary Mazharuddin Shiddiqi, S.Kom., M.Comp.Sc., Ph.D.}
 \newcommand{\examinerone}{Dr. Galileo Galilei, S.T., M.Sc}
 \newcommand{\examinertwo}{Friedrich Nietzsche, S.T., M.Sc}
 \newcommand{\examinerthree}{Alan Turing, ST., MT}
-\newcommand{\headofdepartment}{Prof. Albus Percival Wulfric Brian Dumbledore, S.T., M.T}
+\newcommand{\headofdepartment}{Ary Mazharuddin Shiddiqi, S.Kom., M.Comp.Sc., Ph.D.}
+
+  % Dosen Pembimbing&:& 1. Royyana Muslim Ijtihadie, S.Kom., M.Kom., Ph.D.\\
 
 % identitas
-\newcommand{\nrp}{0123 20 4000 0001}
-\newcommand{\advisornip}{18560710 194301 1 001}
-\newcommand{\coadvisornip}{18560710 194301 1 001}
+\newcommand{\nrp}{5025211123}
+\newcommand{\advisornip}{19770824 200304 1 001}
+\newcommand{\coadvisornip}{19810620 200501 1 003}
 \newcommand{\examineronenip}{18560710 194301 1 001}
 \newcommand{\examinertwonip}{18560710 194301 1 001}
 \newcommand{\examinerthreenip}{18560710 194301 1 001}
-\newcommand{\headofdepartmentnip}{18810313 196901 1 001}
+\newcommand{\headofdepartmentnip}{19810620 200501 1 003}
 
 % judul
-\newcommand{\tatitle}{KALKULASI ENERGI PADA ROKET LUAR ANGKASA BERBASIS \emph{ANTI-GRAVITASI}}
-\newcommand{\engtatitle}{\emph{ANTI-GRAVITY BASED ENERGY CALCULATION ON OUTER SPACE ROCKETS}}
+\newcommand{\tatitle}{IMPLEMENTASI \emph{MULTI-TENANCY} UNTUK PROVISIONING KLASTER KUBERNETES}
+\newcommand{\engtatitle}{\emph{MULTI-TENANCY IMPLEMENTATION FOR KUBERNETES CLUSTER PROVISIONING}}
 
 % tempat
 \newcommand{\place}{Surabaya}
 
 % jurusan
-\newcommand{\studyprogram}{Teknik Dirgantara}
-\newcommand{\engstudyprogram}{Aerospace Engineering}
+\newcommand{\studyprogram}{Teknik Informatika}
+\newcommand{\engstudyprogram}{Informatics}
 
 % fakultas
-\newcommand{\faculty}{Teknologi Dirgantara}
-\newcommand{\engfaculty}{Aerospace Technology}
+\newcommand{\faculty}{Fakultas Teknologi Elektro dan Informatika Cerdas}
+\newcommand{\engfaculty}{Faculty of Intelligent Electrical and Informatics Technology}
 
 % singkatan fakultas
-\newcommand{\facultyshort}{FTMD}
-\newcommand{\engfacultyshort}{FMAE}
+\newcommand{\facultyshort}{FTEIC}
+\newcommand{\engfacultyshort}{ELECTICS}
 
 % departemen
-\newcommand{\department}{Teknik Dirgantara}
-\newcommand{\engdepartment}{Aerospace Engineering}
+\newcommand{\department}{Teknik Informatika}
+\newcommand{\engdepartment}{Informatics}
 
 % kode mata kuliah
-\newcommand{\coursecode}{TD123456}
+\newcommand{\coursecode}{EF234801}
