feat: update buku

--- a/abstrak/abstrak-id.tex
+++ b/abstrak/abstrak-id.tex
@@ -22,7 +22,7 @@
 \endgroup
 
 % Ubah paragraf berikut dengan abstrak dari tugas akhir
-Pada penelitian ini kami mengajukan \lipsum[1]
+Pada penelitian ini kami mengajukan test here if it works \lipsum[1]
 
 % Ubah kata-kata berikut dengan kata kunci dari tugas akhir
-Kata Kunci: Roket, \emph{Anti-gravitasi}, Energi, Angkasa.
+Kata Kunci: \emph{Multi-tenancy}, \emph{Virtual Machine} Roket, \emph{Anti-gravitasi}, Energi, Angkasa.
