--- a/lainnya/kata-pengantar.tex
+++ b/lainnya/kata-pengantar.tex
@@ -9,22 +9,33 @@
 
 % Ubah paragraf-paragraf berikut dengan isi dari kata pengantar
 
-Puji dan syukur kehadirat \lipsum[1][1-5]
-
-Penelitian ini disusun dalam rangka \lipsum[2][1-5]
+Puji dan syukur penulis panjatkan kepada Tuhan Yang Maha Esa karena atas rahmat
+dan karunia-Nya, penulis dapat menyelesaikan laporan tugas akhir yang berjudul
+"IMPLEMENTASI \emph{MULTI-TENANCY} UNTUK PROVISIONING KLASTER KUBERNETES" dengan
+baik. Tugas akhir ini disusun sebagai persyaratan untuk memperoleh gelar sarjana
+pada program studi Teknik Informatika Fakultas Teknologi Elektro dan Informatika
+Cerdas Institut Teknologi Sepuluh Nopember. Penulisan tugas akhir ini tidak lepas
+dari dukungan dan bantuan dari berbagai pihak.
 Oleh karena itu, penulis mengucapkan terima kasih kepada:
 
 \begin{enumerate}[nolistsep]
 
-  \item Keluarga, Ibu, Bapak dan Saudara tercinta yang telah \lipsum[3][1-2]
+  \item Bapak Royyana Muslim Ijtihadie, S.Kom., M.Kom., Ph.D. selaku dosen pembimbing
+    utama penulis dan Bapak Ary Mazharuddin Shiddiqi, S.Kom., M.Comp.Sc., Ph.D. selaku dosen
+    pembimbing kedua penulis yang telah membantu penulis dalam menyelesaikan Tugas Akhir.
 
-  \item Bapak Nikola Tesla, S.T., M.T., selaku \lipsum[4][1-2]
-
-  \item \lipsum[5][1-3]
+  \item Keluarga penulis, Ibu penulis, Bapak penulis dan dua Saudara penulis yang telah 
+    memberikan dukungan kepada penulis. \lipsum[3][1-2]
+    
+  \item Teman-teman "Ahmad Dahlan" yang telah memberikan semangat dan dukungan
+    kepada penulis selama pengerjaan.
 
 \end{enumerate}
 
-Akhir kata, semoga \lipsum[6][1-8]
+Laporan tugas akhir ini jauh dari kata sempurna, oleh karena itu penulis
+sangat terbuka terhadap kritik dan saran yang membangun. Akhir kata, semoga
+laporan tugas akhir ini dapat memberikan dampak dan manfaat yang baik kepada
+seluruh pihak yang memerlukan.
 
 \begin{flushright}
   \begin{tabular}[b]{c}
