--- a/lainnya/pernyataan-keaslian.tex
+++ b/lainnya/pernyataan-keaslian.tex
@@ -27,7 +27,7 @@ Bilamana di kemudian hari ditemukan ketidaksesuaian dengan pernyataan ini, maka 
 \vspace{8ex}
 
 \noindent\begin{tabularx}{\textwidth}{X l}
-                     & \place{}, \ENGMONTH{} \the\year{} \\
+                     & \place{}, \MONTH{} \the\year{} \\
                      &                                   \\
   Mengetahui         &                                   \\
   Dosen Pembimbing   & Mahasiswa                         \\
