--- a/pustaka/pustaka.bib
+++ b/pustaka/pustaka.bib
@@ -17,3 +17,53 @@ BibTex yang digunakan pada file ini.
   year    = 2021,
   url     = {https://airandspace.si.edu/explore-and-learn/topics/discovery/about.cfm},
   urldate = {2021-02-03}}
+
+@inproceedings{borg-references,
+  title = {Large-scale cluster management at {Google} with {Borg}},
+  author = {Abhishek Verma and Luis Pedrosa and Madhukar R. Korupolu and David
+            Oppenheimer and Eric Tune and John Wilkes},
+  year = {2015},
+  booktitle = {Proceedings of the European Conference on Computer Systems
+               (EuroSys)},
+  address = {Bordeaux, France}}
+  
+@INPROCEEDINGS{6830928,
+  author={AlJahdali, Hussain and Albatli, Abdulaziz and Garraghan, Peter and Townend, Paul and Lau, Lydia and Xu, Jie},
+  booktitle={2014 IEEE 8th International Symposium on Service Oriented System Engineering}, 
+  title={Multi-tenancy in Cloud Computing}, 
+  year={2014},
+  volume={},
+  number={},
+  pages={344-351},
+  keywords={Security;Cloud computing;Resource management;Computational modeling;Virtualization;Databases;Servers;Cloud Computing;Security;Multi-Tenancy;Attack Models;Cloud Data},
+  doi={10.1109/SOSE.2014.50}}
+
+
+@ARTICLE{1430629,
+  author={Smith, J.E. and Ravi Nair},
+  journal={Computer}, 
+  title={The architecture of virtual machines}, 
+  year={2005},
+  volume={38},
+  number={5},
+  pages={32-38},
+  keywords={Virtual machining;Computer architecture;Voice mail;Virtual manufacturing;Computer interfaces;Hardware;Application software;Instruction sets;Operating systems;Microprocessors;virtualization technology;virtual machines;disk storage;computer architectures;VM taxonomy;software systems},
+  doi={10.1109/MC.2005.173}}
+
+@misc{k3s-website,
+  author = {{Rancher}},
+  title = {K3s Documentations},
+  year = {2025},
+  url = {https://k3s.io/}}
+
+@ARTICLE{5388296,
+  author={Meyer, R. A. and Seawright, L. H.},
+  journal={IBM Systems Journal}, 
+  title={A virtual machine time-sharing system}, 
+  year={1970},
+  volume={9},
+  number={3},
+  pages={199-218},
+  keywords={},
+  doi={10.1147/sj.93.0199}}
+
