--- a/pustaka/variables.tex
+++ b/pustaka/variables.tex
@@ -34,8 +34,8 @@
 \newcommand{\engstudyprogram}{Informatics}
 
 % fakultas
-\newcommand{\faculty}{Fakultas Teknologi Elektro dan Informatika Cerdas}
-\newcommand{\engfaculty}{Faculty of Intelligent Electrical and Informatics Technology}
+\newcommand{\faculty}{Teknologi Elektro dan Informatika Cerdas}
+\newcommand{\engfaculty}{Intelligent Electrical and Informatics Technology}
 
 % singkatan fakultas
 \newcommand{\facultyshort}{FTEIC}
