feat: update buku

--- a/bab/1-pendahuluan.tex
+++ b/bab/1-pendahuluan.tex
@@ -4,29 +4,31 @@
 % Ubah bagian-bagian berikut dengan isi dari pendahuluan
 
 Penelitian atau implementasi ini dilatarbelakangi oleh pesatnya
-penggunaan \emph{cloud computing} serta.
+penggunaan \emph{cloud computing} serta kebutuhan untuk meningkatkan
+utilisasi penggunaan komputer di laboratorium Departemen Teknik Informatika
+Institut Teknologi Sepuluh Nopember.
 
 \section{Latar Belakang}
 \label{sec:latarbelakang}
 
 Pesatnya perkembangan teknologi dalam bidang komputer
-seperti \emph{cloud computing} memudahkan penggunaan \emph{resource}
-komputasi secara dinamis. Teknologi \emph{cloud computing} memungkinkan
-pengguna untuk menggunakan \emph{resource} komputasi sesuai dengan spesifikasi
-yang dibutuhkan tanpa perlu memiliki \emph{resource} komputasi tersebut secara
-fisik. Salah satu bentuk implementasi \emph{cloud computing} adalah
+seperti komputasi awan memudahkan penggunaan sumber daya
+komputasi secara dinamis. Teknologi komputasi awan memungkinkan
+pengguna untuk menggunakan sumber daya komputasi sesuai dengan spesifikasi
+yang dibutuhkan tanpa perlu memiliki sumber daya komputasi tersebut secara
+fisik. Salah satu bentuk implementasi komputasi awan adalah
 Google Cloud Platform (GCP).
 
-GCP menyediakan banyak layanan \emph{cloud computing} seperti Compute Engine yang merupakan
+GCP menyediakan banyak layanan komputasi awan seperti Compute Engine yang merupakan
 layanan \emph{virtual machine} yang berjalan di mesin Google dan Google Kubernetes Engine (GKE)
 yang merupakan layanan Kubernetes. Semua layanan tersebut merupakan bentuk implementasi
-\emph{cloud computing} karena pengguna tidak perlu memiliki \emph{resources} tersebut secara
-fisik namun menggunakan \emph{resources} komputasi yang ditawarkan oleh penyedia jasa seperti GCP.
+komputasi awan karena pengguna tidak perlu memiliki sumber daya tersebut secara
+fisik namun menggunakan sumber daya komputasi yang ditawarkan oleh penyedia jasa seperti GCP.
 
 Pada tugas akhir ini, akan dikembangkan sebuah sistem \emph{provisioning} untuk virtual machine
 secara dinamis yang terletak di komputer Teknik Informatika ITS. \emph{Virtual machines}
 yang dibuat akan secara otomatis tergabung dalam sebuah klaster Kubernetes yang nantinya
-dapat digunakan oleh pengguna.
+dapat digunakan oleh pengguna. 
 
 \section{Permasalahan}
 \label{sec:permasalahan}
