--- a/bab/3-desain-implementasi.tex
+++ b/bab/3-desain-implementasi.tex
@@ -3,17 +3,17 @@
 
 % Ubah bagian-bagian berikut dengan isi dari desain dan implementasi
 
-Penelitian ini dilaksanakan sesuai \lipsum[1][1-5]
+Penelitian ini dilaksanakan sesuai dengan 
 
 \section{Deskripsi Sistem}
 \label{sec:deskripsisistem}
 
-Sistem akan dibuat dengan \lipsum[1-2]
+Sistem akan dibuat dengan
 
 \section{Implementasi Alat
   \label{sec:implementasi alat}}
 
-Alat diimplementasikan dengan \lipsum[1]
+Alat diimplementasikan dengan
 
 % Contoh pembuatan potongan kode
 \begin{lstlisting}[
@@ -28,8 +28,6 @@ int main() {
     return 0;
 }
 \end{lstlisting}
-
-\lipsum[2-3]
 
 % Contoh input potongan kode dari file
 \lstinputlisting[
